--- a/YSFGateway.ini
+++ b/YSFGateway.ini
@@ -1,8 +1,8 @@
 [General]
-Callsign=EA5GVK-2
+Callsign=EANXXX
 Suffix=RPT
 # Suffix=ND
-Id=214501632
+Id=123456789
 RptAddress=127.0.0.1
 RptPort=3200
 LocalAddress=127.0.0.1
